adição do z-index para corrigi bug do header

--- a/css/style.css
+++ b/css/style.css
@@ -58,6 +58,7 @@ p{
   width: 100%;
   background:#fec63e;
   padding: 15px 0px;
+  z-index: 10;
 }
 
 .header_menu{
